[package]
name = "degen_csg"
description = "Constructive solid geometry for Bevy game engine"
 
version = "0.13.25"
 
 
edition = "2021"
authors = [ "ethereumdegen" ]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/ethereumdegen/degen_csg"
exclude = [ "/assets/", "/examples/" ]
keywords = [ "csg" , "bevy" ]


[dependencies]
anyhow = "1.0.75"
bevy = "0.13.0"
bevy_mod_sysfail = "6.0.0"
futures-lite = "1.13.0"
image = "0.24.7" 
png = "0.17.11"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
 

thiserror = "1.0.48"
 
  
serde_json = "1.0.113"
bincode = "1.3.3"
rand = "0.8.5"
 
[[example]]
name = "basic"
path = "examples/basic.rs"

